		textures yet.
20110706	Implementing register pair variant of SuperH fmov_frm_rn,
		adding implementations of "LDS Rm,MACH", and "LDS Rm,MACL".
20110902	Reviving the old legacy Alpha CPU support, which was removed
		20090703 (i.e. NOT using the new framework).
20110906	Slowly continuing on the Alpha emulation mode: going through
		the existing virtual memory and PALcode stuff.
20120120	Avoid crash in cpu_ppc_instr_loadstore.cc for 64-bit emulation
		(since only 32-bit access is actually implemented); fallback
		to generic (slow) access.
		Minor OpenFirmware and SPR fixes to reach further with a
		FreeBSD/powerpc 9.0 kernel (-Xe g4).
		Updating the NetBSD/pmax install instructions: 5.1 -> 5.1.1.
		Updating the NetBSD/cobalt install instructions 5.0.1 to 5.1.1.
		Redirect PowerPC SPRs 0x10c/10d to 0x11c/11d (Time Base).
20120121	Updating OpenBSD/landisk installation instructions: 4.9 -> 5.0.
20120507	Adding a patch from Juli Mallett for MIPS rdhwr reg 29.
20120617	Adding a patch from James Peacock for ARM MSR fields.
20120724	Adding a patch from David Brownlee (mkstemp on NetBSD), and
		trying to make things build without warnings with GCC 4.6.x.
20120731	Adding a patch from David Brownlee: a more reasonable TOC is
		returned in dev_dreamcast_gdrom.cc (for NetBSD/dreamcast).
20120906	Adding a patch from George Koehler to fix DHCP response bug.
20120922	Fixing an ARM instruction encoding bug: for shifter_operand
		immediates, the carry bit should be set to bit 31 of the
		shifter_operand if and only if rotate_imm != 0. I've added
		detection for the case when this would bug out (although I
		have never seen it happen yet), and fixed a bug which did
		happen: for short register formats (i.e. no shift or other
		complex things), the code should not be run, but it was run
		anyway, leading to wrong Carry flag results for e.g. the TST
		instruction. This was triggered when running int64_t modulo.
20130907	Updating NetBSD/dreamcast test instructions: 5.1 -> 6.1.1.
